// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no value and no options 1`] = `
.c2 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c3 {
  margin-bottom: 0.5rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5:focus {
  border: 1px solid #666;
}

.c4 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

@media (min-width:740px) {
  .c5 {
    max-width: 290px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 c3"
      color="inherit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Search for bikes",
        }
      }
      size="s"
    />
    <div
      className="c4"
    >
      
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className="c5"
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        required={false}
        type="text"
        value=""
      />
    </div>
    
  </label>
</div>
`;

exports[`renders correctly with value and no options 1`] = `
.c2 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c3 {
  margin-bottom: 0.5rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5:focus {
  border: 1px solid #666;
}

.c4 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

@media (min-width:740px) {
  .c5 {
    max-width: 290px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 c3"
      color="inherit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Search for bikes",
        }
      }
      size="s"
    />
    <div
      className="c4"
    >
      
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className="c5"
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        required={false}
        type="text"
        value="bikes"
      />
    </div>
    
  </label>
</div>
`;

exports[`renders correctly with value and options 1`] = `
.c2 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c10 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c3 {
  margin-bottom: 0.5rem;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c5:focus {
  border: 1px solid #666;
}

.c4 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

.c6 {
  z-index: 3;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  position: absolute;
  left: 0;
  max-height: 300px;
  overflow: auto;
  background-color: #FFFFFF;
  border: 1px solid;
  margin-top: -1px;
  width: 100%;
}

.c7 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.c8 {
  padding: 0.5rem;
}

.c9 {
  cursor: pointer;
  border-top: 1px solid #F4F3F5;
}

.c9:hover,
.c9:focus {
  background-color: #F4F3F5;
}

@media (min-width:740px) {
  .c5 {
    max-width: 290px;
  }
}

@media (min-width:740) {
  .c6 {
    max-width: 500px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 c3"
      color="inherit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Search for bikes",
        }
      }
      size="s"
    />
    <div
      className="c4"
    >
      
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className="c5"
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        required={false}
        type="text"
        value="c"
      />
    </div>
    
  </label>
  <div
    className="c6 TextInputWithDropdown__options"
  >
    <ul
      className="c7"
      onBlur={[Function]}
      role="listbox"
    >
      <li
        aria-selected={false}
        className="c8 c9"
        id="option-0"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c10"
          color="inherit"
          size="s"
        >
          Canyon
        </span>
      </li>
      <li
        aria-selected={false}
        className="c8 c9"
        id="option-1"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c10"
          color="inherit"
          size="s"
        >
          Cannondale
        </span>
      </li>
      <li
        aria-selected={false}
        className="c8 c9"
        id="option-2"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c10"
          color="inherit"
          size="s"
        >
          Condor
        </span>
      </li>
      <li
        aria-selected={false}
        className="c8 c9"
        id="option-3"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c10"
          color="inherit"
          size="s"
        >
          Cube
        </span>
      </li>
    </ul>
  </div>
</div>
`;
